--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/async-lock": "^1.3.0",
+    "@types/node": "^18.11.9",
+    "@types/node-emoji": "^1.8.2",
     "@types/sharp": "^0.31.0",
     "async-lock": "^1.4.0",
     "better-sqlite3": "^8.0.0",
     "discord.js": "^14.6.0",
     "log4js": "^6.7.1",
     "mineflayer": "^4.5.1",
+    "node-emoji": "^1.11.0",
     "node-fetch": "^3.3.0",
     "sharp": "^0.31.2"
   },
