--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "module": "es2022",
     "target": "es2022",
     "moduleResolution": "node",
-    "strict": true 
-  }
+    "strict": true
+  },
+  "include": [
+    "./environent.d.ts"
+  ]
 }
