--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^1.4.0",
     "@types/async-lock": "^1.3.0",
-    "@types/node": "^18.11.9",
-    "@types/sharp": "^0.31.0",
+    "@types/node": "^18.11.18",
+    "@types/sharp": "^0.31.1",
+    "@types/jaro-winkler": "^0.2.1",
+    "@types/humanize-duration": "^3.27.1",
     "async-lock": "^1.4.0",
-    "better-sqlite3": "^8.0.0",
-    "discord.js": "^14.6.0",
+    "better-sqlite3": "^8.0.1",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
     "gemoji": "^8.0.0",
     "log4js": "^6.7.1",
-    "mineflayer": "^4.5.1",
+    "mineflayer": "^4.7.0",
     "node-fetch": "^3.3.0",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.3",
+    "fastest-levenshtein": "^1.0.16"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.2"
+    "@types/better-sqlite3": "^7.6.3"
   }
 }
