--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bridgev2",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "fpf bridge",
   "main": "bridge.ts",
   "author": "",
@@ -11,8 +11,6 @@
     "@types/async-lock": "^1.3.0",
     "@types/node": "^18.11.18",
     "@types/sharp": "^0.31.1",
-    "@types/jaro-winkler": "^0.2.1",
-    "@types/humanize-duration": "^3.27.1",
     "async-lock": "^1.4.0",
     "better-sqlite3": "^8.0.1",
     "discord.js": "^14.7.1",
@@ -23,6 +21,9 @@
     "mineflayer": "^4.7.0",
     "node-fetch": "^3.3.0",
     "sharp": "^0.31.3",
+    "ts-node": "^10.9.1",
+    "jaro-winkler-typescript": "^1.0.1",
+    "humanize-duration-ts": "^2.1.1",
     "fastest-levenshtein": "^1.0.16"
   },
   "devDependencies": {
