--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
+    "fastest-levenshtein": "^1.0.16",
     "gemoji": "^8.0.0",
+    "humanize-duration-ts": "^2.1.1",
+    "jaro-winkler-typescript": "^1.0.1",
     "log4js": "^6.7.1",
     "mineflayer": "^4.7.0",
-    "node-fetch": "^3.3.0",
     "sharp": "^0.31.3",
-    "ts-node": "^10.9.1",
-    "jaro-winkler-typescript": "^1.0.1",
-    "humanize-duration-ts": "^2.1.1",
-    "fastest-levenshtein": "^1.0.16"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.3"
