--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/async-lock": "^1.3.0",
     "@types/node": "^18.11.18",
     "@types/sharp": "^0.31.1",
+    "async-exit-hook": "^2.0.1",
     "async-lock": "^1.4.0",
     "better-sqlite3": "^8.0.1",
     "discord.js": "^14.7.1",
@@ -26,6 +27,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/async-exit-hook": "^2.0.0",
     "@types/better-sqlite3": "^7.6.3"
   }
 }
