add manual verify and role handling

--- a/config_example.json
+++ b/config_example.json
@@ -12,7 +12,11 @@
     "token": "token",
     "client": "snowflake",
     "guild": "snowflake",
-    "channel": "snowflake"
+    "channel": "snowflake",
+    "verificationRoles": {
+      "unverified": "snowflake",
+      "verified": "snowflake"
+    }
   },
   "bridge": {
     "prefix": "_",
