make everything a class; pattern manager; lots of other things

--- a/config_example.json
+++ b/config_example.json
@@ -16,7 +16,11 @@
     "verificationRoles": {
       "unverified": "snowflake",
       "verified": "snowflake"
-    }
+    },
+    "staffRoles": [
+      "snowflake1",
+      "snowflake2"
+    ]
   },
   "bridge": {
     "prefix": "_",
