Add verification system
and a lot of refactoring to (hopefully) better support running as a pure discord bot, test individual features, and so on.

--- a/config_example.json
+++ b/config_example.json
@@ -10,8 +10,17 @@
   },
   "discord": {
     "token": "token",
+    "client": "snowflake",
     "guild": "snowflake",
-    "channel": "snowflake"
+    "channel": "snowflake",
+    "verificationRoles": {
+      "unverified": "snowflake",
+      "verified": "snowflake"
+    },
+    "staffRoles": [
+      "snowflake1",
+      "snowflake2"
+    ]
   },
   "bridge": {
     "prefix": "_",
