delete messages in verification channel

--- a/config_example.json
+++ b/config_example.json
@@ -11,9 +11,10 @@
     "client": "snowflake",
     "guild": "snowflake",
     "channel": "snowflake",
-    "verificationRoles": {
-      "unverified": "snowflake",
-      "verified": "snowflake"
+    "verification": {
+      "channelId": "snowflake",
+      "unverifiedRole": "snowflake",
+      "verifiedRole": "snowflake"
     },
     "staffRoles": [
       "snowflake1",
