--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
     "fastest-levenshtein": "^1.0.16",
+    "fuzzysort": "^2.0.4",
     "gemoji": "^8.0.0",
     "humanize-duration-ts": "^2.1.1",
     "jaro-winkler-typescript": "^1.0.1",
