--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jaro-winkler-typescript": "^1.0.1",
     "log4js": "^6.7.1",
     "mineflayer": "^4.7.0",
+    "romans": "^2.0.8",
     "sharp": "^0.31.3",
     "ts-node": "^10.9.1"
   },
