--- a/package.json
+++ b/package.json
@@ -1,35 +1,59 @@
 {
-  "name": "bridgev2",
-  "version": "1.1.0",
-  "description": "fpf bridge",
-  "main": "bridge.ts",
-  "author": "",
-  "type": "module",
-  "license": "ISC",
-  "dependencies": {
-    "@discordjs/builders": "^1.4.0",
-    "@types/async-lock": "^1.3.0",
-    "@types/node": "^18.11.18",
-    "@types/sharp": "^0.31.1",
-    "async-exit-hook": "^2.0.1",
-    "async-lock": "^1.4.0",
-    "better-sqlite3": "^8.0.1",
-    "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "emoji-regex": "^10.2.1",
-    "fastest-levenshtein": "^1.0.16",
-    "fuzzysort": "^2.0.4",
-    "gemoji": "^8.0.0",
-    "humanize-duration-ts": "^2.1.1",
-    "jaro-winkler-typescript": "^1.0.1",
-    "log4js": "^6.7.1",
-    "mineflayer": "^4.7.0",
-    "romans": "^2.0.8",
-    "sharp": "^0.31.3",
-    "ts-node": "^10.9.1"
-  },
-  "devDependencies": {
-    "@types/async-exit-hook": "^2.0.0",
-    "@types/better-sqlite3": "^7.6.3"
-  }
+	"name": "bridge-v2",
+	"version": "2.0.0",
+	"description": "A discord bot that bridges messages between discord and minecraft",
+	"main": "dist/index.js",
+	"type": "module",
+	"scripts": {
+		"dev": "env-cmd --silent nodemon --esm ./src/index.ts",
+		"deploy": "env-cmd --silent nodemon --esm ./src/deploy.ts",
+		"start": "node --enable-source-maps .",
+		"prestart": "tsc --build",
+		"format": "pretty-quick"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/appable0/BridgeV2.git"
+	},
+	"author": "appable, IlmarsXd",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/appable0/BridgeV2/issues"
+	},
+	"homepage": "https://github.com/appable0/BridgeV2",
+	"devDependencies": {
+		"@discordjs/builders": "^1.6.3",
+		"@types/async-exit-hook": "^2.0.0",
+		"@types/async-lock": "^1.4.0",
+		"@types/better-sqlite3": "^7.6.4",
+		"@types/node": "^20.3.2",
+		"@types/sharp": "^0.32.0",
+		"async-exit-hook": "^2.0.1",
+		"async-lock": "^1.4.0",
+		"better-sqlite3": "^8.4.0",
+		"env-cmd": "^10.1.0",
+		"nodemon": "^2.0.22",
+		"prettier": "^2.8.8",
+		"pretty-quick": "^3.1.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.1.3"
+	},
+	"dependencies": {
+		"discord.js": "^14.7.1",
+		"dotenv": "^16.0.3",
+		"emoji-regex": "^10.2.1",
+		"fastest-levenshtein": "^1.0.16",
+		"fuzzysort": "^2.0.4",
+		"gemoji": "^8.1.0",
+		"humanize-duration-ts": "^2.1.1",
+		"jaro-winkler-typescript": "^1.0.1",
+		"log4js": "^6.9.1",
+		"mineflayer": "^4.9.0",
+		"romans": "^2.0.8",
+		"sharp": "^0.32.1"
+	},
+	"volta": {
+		"node": "18.15.0",
+		"yarn": "1.22.19"
+	}
 }
