--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"typescript": "^5.1.3"
 	},
 	"dependencies": {
+		"@types/pg": "^8.10.2",
 		"discord.js": "^14.7.1",
 		"dotenv": "^16.0.3",
 		"emoji-regex": "^10.2.1",
@@ -49,8 +50,10 @@
 		"jaro-winkler-typescript": "^1.0.1",
 		"log4js": "^6.9.1",
 		"mineflayer": "^4.9.0",
+		"pg": "^8.11.1",
 		"romans": "^2.0.8",
-		"sharp": "^0.32.1"
+		"sharp": "^0.32.1",
+		"sql-template-strings": "^2.2.2"
 	},
 	"volta": {
 		"node": "18.15.0",
