--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/async-lock": "^1.4.0",
 		"@types/better-sqlite3": "^7.6.4",
 		"@types/node": "^20.3.2",
+		"@types/pg": "^8.10.2",
 		"@types/sharp": "^0.32.0",
 		"async-exit-hook": "^2.0.1",
 		"async-lock": "^1.4.0",
@@ -49,8 +50,10 @@
 		"jaro-winkler-typescript": "^1.0.1",
 		"log4js": "^6.9.1",
 		"mineflayer": "^4.9.0",
+		"pg": "^8.11.1",
 		"romans": "^2.0.8",
-		"sharp": "^0.32.1"
+		"sharp": "^0.32.1",
+		"sql-template-strings": "^2.2.2"
 	},
 	"volta": {
 		"node": "18.15.0",
