add missing awaits

--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
 		"@types/better-sqlite3": "^7.6.4",
 		"@types/node": "^20.3.2",
 		"@types/sharp": "^0.32.0",
+		"@typescript-eslint/eslint-plugin": "^6.4.1",
+		"@typescript-eslint/parser": "^6.4.1",
 		"async-exit-hook": "^2.0.1",
 		"async-lock": "^1.4.0",
 		"better-sqlite3": "^8.4.0",
 		"env-cmd": "^10.1.0",
+		"eslint": "^8.48.0",
 		"nodemon": "^2.0.22",
 		"prettier": "^2.8.8",
 		"pretty-quick": "^3.1.3",
