--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 		"sourceMap": true /* Generates corresponding '.map' file. */,
 		// "outFile": "./",                       /* Concatenate and emit output to single file. */
 		"outDir": "./dist" /* Redirect output structure to the directory. */,
-		//"rootDir": "./src",                     /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+		//"rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
 		// "composite": true,                     /* Enable project compilation */
 		// "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
 		// "removeComments": true,                /* Do not emit comments to output. */
@@ -37,7 +37,7 @@
 		// "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 		/* Module Resolution Options */
-		"moduleResolution": "Node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+		"moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
 		"resolveJsonModule": true /* Allow importing .json files. */,
 		// "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
 		// "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
@@ -53,11 +53,9 @@
 		// "mapRoot": "",                         /* Specify the location where debugger should locate map files instead of generated locations. */
 		// "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
 		// "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
-
 		/* Experimental Options */
 		"experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
 		"emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
-
 		/* Advanced Options */
 		"skipLibCheck": true /* Skip type checking of declaration files. */,
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
