unhardcoded guild reqs command

--- a/src/config_example.json
+++ b/src/config_example.json
@@ -38,5 +38,11 @@
       "discord": "snowflake",
       "isStaff": false
     }
+  ],
+  "joinRequirements": [
+    {
+      "sbLevel": 0,
+      "overflowFishingXp": 0
+    }
   ]
 }
