--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
 		"mineflayer": "^4.20.0",
 		"p-throttle": "^6.1.0",
 		"romans": "^2.0.8",
-		"sharp": "^0.32.5"
+		"sharp": "^0.32.5",
+		"stuf": "1.0.4"
 	},
 	"volta": {
 		"node": "20.11.1",
