add a channel for message logs

--- a/src/config_example.json
+++ b/src/config_example.json
@@ -12,6 +12,7 @@
     "guild": "snowflake",
     "channel": "snowflake",
     "shutdownWebhook": "snowflake",
+    "loggerWebhook": "snowflake",
     "verification": {
       "channelId": "snowflake",
       "unverifiedRole": "snowflake",
