--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
 		"deploy": "env-cmd --silent nodemon --esm ./src/deploy.ts",
 		"start": "node --enable-source-maps .",
 		"prestart": "tsc --build",
-		"format": "pretty-quick"
+		"format": "pretty-quick",
+    "test": "jest"
 	},
+  "jest": {
+   "preset": "ts-jest"
+  },
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/appable0/BridgeV2.git"
@@ -26,6 +30,7 @@
 		"@types/async-exit-hook": "^2.0.0",
 		"@types/async-lock": "^1.4.0",
 		"@types/better-sqlite3": "^7.6.4",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^20.5.6",
 		"@types/sharp": "^0.32.0",
 		"@typescript-eslint/eslint-plugin": "^6.4.1",
@@ -35,9 +40,11 @@
 		"better-sqlite3": "^8.5.2",
 		"env-cmd": "^10.1.0",
 		"eslint": "^8.48.0",
+		"jest": "^29.7.0",
 		"nodemon": "^3.0.1",
 		"prettier": "^3.0.2",
 		"pretty-quick": "^3.1.3",
+		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.2.2"
 	},
