--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
 	"type": "module",
 	"scripts": {
 		"dev": "env-cmd --silent nodemon --esm ./src/index.ts",
-		"deploy": "env-cmd --silent nodemon --esm ./src/deploy.ts",
+		"discord": "node --import tsx --enable-source-maps ./src/tests/discordOnly.ts",
+		"deploy": "node --import tsx --enable-source-maps ./src/deploy.ts",
 		"start": "node --enable-source-maps .",
 		"prestart": "tsc --build",
 		"format": "pretty-quick",
-    "test": "jest"
+		"test": "jest"
 	},
-  "jest": {
-   "preset": "ts-jest"
-  },
+	"jest": {
+		"preset": "ts-jest"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/appable0/BridgeV2.git"
@@ -62,7 +63,8 @@
 		"p-throttle": "^6.1.0",
 		"romans": "^2.0.8",
 		"sharp": "^0.32.5",
-		"stuf": "1.0.4"
+		"stuf": "1.0.4",
+		"tsx": "^4.19.2"
 	},
 	"volta": {
 		"node": "20.11.1",
