transition to market api

--- a/src/config_example.json
+++ b/src/config_example.json
@@ -55,5 +55,6 @@
     }
   ],
   "linking": true,
-  "achievementRoles": true
+  "achievementRoles": true,
+  "marketApiUrl": "http://example-market-api.com"
 }
