fix elections command
also, update prettier/pretty-quick

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
 	"useTabs": true,
-	"semi": true,
+	"tabWidth": 4,
+	"semi": false,
 	"singleQuote": false,
 	"trailingComma": "none",
 	"bracketSpacing": true
