--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"dev": "env-cmd --silent nodemon --esm ./src/index.ts",
 		"discord": "node --import tsx --enable-source-maps ./src/tests/discordOnly.ts",
 		"election-test": "node --import tsx --enable-source-maps ./src/tests/electionTest.ts",
+		"commands": "node --import tsx --enable-source-maps ./src/tests/commands.ts",
 		"deploy": "node --import tsx --enable-source-maps ./src/deploy.ts",
 		"start": "node --enable-source-maps .",
 		"prestart": "tsc --build",
@@ -16,14 +17,23 @@
 	},
 	"jest": {
 		"preset": "ts-jest",
-    "testPathIgnorePatterns": ["dist"],
-    "extensionsToTreatAsEsm": [".ts"],
-    "transform": {
-      "\\.[jt]s$": ["ts-jest", { "useESM": true }]
-    },
-    "moduleNameMapper": {
-      "(.+)\\.js": "$1"
-    }
+		"testPathIgnorePatterns": [
+			"dist"
+		],
+		"extensionsToTreatAsEsm": [
+			".ts"
+		],
+		"transform": {
+			"\\.[jt]s$": [
+				"ts-jest",
+				{
+					"useESM": true
+				}
+			]
+		},
+		"moduleNameMapper": {
+			"(.+)\\.js": "$1"
+		}
 	},
 	"repository": {
 		"type": "git",
@@ -52,8 +62,8 @@
 		"eslint": "^8.48.0",
 		"jest": "^29.7.0",
 		"nodemon": "^3.0.1",
-		"prettier": "^3.0.2",
-		"pretty-quick": "^3.1.3",
+		"prettier": "^3.5.3",
+		"pretty-quick": "^4.1.1",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.2.2"
@@ -72,9 +82,9 @@
 		"p-throttle": "^6.1.0",
 		"romans": "^2.0.8",
 		"sharp": "^0.32.5",
+		"socks": "^2.8.3",
 		"stuf": "1.0.4",
-		"tsx": "^4.19.2",
-		"socks": "^2.8.3"
+		"tsx": "^4.19.2"
 	},
 	"volta": {
 		"node": "20.11.1",
