--- a/package.json
+++ b/package.json
@@ -17,23 +17,14 @@
 	},
 	"jest": {
 		"preset": "ts-jest",
-		"testPathIgnorePatterns": [
-			"dist"
-		],
-		"extensionsToTreatAsEsm": [
-			".ts"
-		],
-		"transform": {
-			"\\.[jt]s$": [
-				"ts-jest",
-				{
-					"useESM": true
-				}
-			]
-		},
-		"moduleNameMapper": {
-			"(.+)\\.js": "$1"
-		}
+    "testPathIgnorePatterns": ["dist"],
+    "extensionsToTreatAsEsm": [".ts"],
+    "transform": {
+      "\\.[jt]s$": ["ts-jest", { "useESM": true }]
+    },
+    "moduleNameMapper": {
+      "(.+)\\.js": "$1"
+    }
 	},
 	"repository": {
 		"type": "git",
@@ -63,7 +54,7 @@
 		"jest": "^29.7.0",
 		"nodemon": "^3.0.1",
 		"prettier": "^3.0.2",
-		"pretty-quick": "^4.1.1",
+		"pretty-quick": "^3.1.3",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.2.2"
@@ -82,9 +73,9 @@
 		"p-throttle": "^6.1.0",
 		"romans": "^2.0.8",
 		"sharp": "^0.32.5",
-		"socks": "^2.8.3",
 		"stuf": "1.0.4",
-		"tsx": "^4.19.2"
+		"tsx": "^4.19.2",
+		"socks": "^2.8.3"
 	},
 	"volta": {
 		"node": "20.11.1",
