specify exact mineflayer

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"humanize-duration-ts": "^2.1.1",
 		"jaro-winkler-typescript": "^1.0.1",
 		"log4js": "^6.9.1",
-		"mineflayer": "^4.20.0",
+		"mineflayer": "4.20.0",
 		"p-throttle": "^6.1.0",
 		"romans": "^2.0.8",
 		"sharp": "^0.32.5",
