--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@types/sharp": "^0.32.0",
 		"@typescript-eslint/eslint-plugin": "^6.4.1",
 		"@typescript-eslint/parser": "^6.4.1",
+		"@types/pako": "2.0.4",
 		"async-exit-hook": "^2.0.1",
 		"async-lock": "^1.4.0",
 		"better-sqlite3": "^8.5.2",
@@ -83,7 +84,7 @@
 		"romans": "^2.0.8",
 		"sharp": "^0.32.5",
 		"socks": "^2.8.3",
-		"stuf": "1.0.4",
+		"pako": "2.1.0",
 		"tsx": "^4.19.2"
 	},
 	"volta": {
