add officer channel to config

--- a/src/config_example.json
+++ b/src/config_example.json
@@ -10,6 +10,7 @@
 		"client": "snowflake",
 		"guild": "snowflake",
 		"channel": "snowflake",
+		"officerChannel": "snowflake",
 		"shutdownWebhook": "snowflake",
 		"loggerWebhook": "snowflake",
 		"verification": {
